--- a/tabPageFiles/popup.html
+++ b/tabPageFiles/popup.html
@@ -115,7 +115,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		
 		<!-- Include Facebox stuff -->
 		<link rel="stylesheet" href="facebox/facebox.css" />
-		<script type="text/javascript" src="ClockAndLinks/js/jquery.js"></script>
+		<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="facebox/facebox.js"></script>
 		
 		<script type="text/javascript">			
@@ -243,6 +243,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				});
 				
 			</script>
+			<!--
 			<div>
 				<h2>Add New Link</h2>
 				<h3>Make sure you copy the entire URL into this box! (ex. http://www.google.com)</h3>
