--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -13,7 +13,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 -->
 <script type="text/javascript">
 	
-var debug = true;
+var debug = false;
 var lsTable = "bantp";
 var defaultData = {
 	"info": {
@@ -32,44 +32,100 @@ var defaultData = {
 		"linkCount": 10,
 		"links": {
 			0: {
+				"id"  : 0,
 				"href": "http://www.facebook.com",
-				"name": "facebook"
+				"name": "facebook",
+				"order" : 1
 			},
 			1: {
+				"id"  : 1,
 				"href": "http://www.google.com",
-				"name": "google"
+				"name": "google",
+				"order" : 2
 			},
 			2: {
+				"id"  : 2,
 				"href": "http://www.gmail.com",
-				"name": "gmail"
+				"name": "gmail",
+				"order" : 3
 			},
 			3: {
+				"id"  : 3,
 				"href": "http://www.lifehacker.com",
-				"name": "lifehacker"
+				"name": "lifehacker",
+				"order" : 4
 			},
 			4: {
+				"id"  : 4,
 				"href": "http://www.gizmodo.com",
-				"name": "gizmodo"
+				"name": "gizmodo",
+				"order" : 5
 			},
 			5: {
+				"id"  : 5,
 				"href": "http://www.newegg.com",
-				"name": "newegg"
+				"name": "newegg",
+				"order" : 6
 			},
 			6: {
+				"id"  : 6,
 				"href": "http://www.last.fm",
-				"name": "last.fm"
+				"name": "last.fm",
+				"order" : 7
 			},
 			7: {
+				"id"  : 7,
 				"href": "https://www.google.com/calendar/render?tab=mc",
-				"name": "google calendar"
+				"name": "google calendar",
+				"order" : 8
 			},
 			8: {
-				"href": "http://www.php.net",
-				"name": "php.net"
+				"id"  : 8,
+				"href": "http://www.paypal.com",
+				"name": "paypal",
+				"order" : 9
 			},
 			9: {
+				"id"  : 9,
 				"href": "http://amazon.com",
-				"name": "amazon"
+				"name": "amazon",
+				"order" : 10
+			},
+			10: {
+				"id"  : 10,
+				"href": "http://www.beatport.com",
+				"name": "beatport",
+				"order" : 11
+			},
+			11: {
+				"id"  : 11,
+				"href": "http://www.nytimes.com/",
+				"name": "the new york times",
+				"order" : 12
+			},
+			12: {
+				"id"  : 12,
+				"href": "http://netflix.com",
+				"name": "netflix",
+				"order" : 13
+			},
+			13: {
+				"id"  : 13,
+				"href": "http://hulu.com",
+				"name": "hulu",
+				"order" : 14
+			},
+			14: {
+				"id"  : 14,
+				"href": "http://tusplus.com",
+				"name": "tuts+",
+				"order" : 15
+			},
+			15: {
+				"id"  : 15,
+				"href": "http://spotify.com",
+				"name": "spotify",
+				"order" : 16
 			}
 		}
 	}
@@ -80,14 +136,20 @@ log(defaultData);
 log(JSON.stringify(defaultData));
 
 function log(msg) {
-	if(debug) {
-		console.log(msg);
+	if( debug == true ) {
+		//console.log(msg);
 	}
 }
 
 function getDeveloperMode() {
 	// Sometime soon I will mess with this, but for now it's just going to be true.
-	return true;
+	return false;
+}
+
+function sortLinks( mode , obj ) {
+	if( mode == "desc" ) {
+
+	}
 }
 
 
@@ -230,22 +292,22 @@ function isFirstInstall() {
 
 function buildLinks() {
 	var data = parseDatabase();
-	var debug = getDeveloperMode();
+	//var debug = getDeveloperMode();
+	var debug = true;
 	log('Working on links now...');
 	var linkOutput = "";
 	var links = data.links.links;
 	if(debug) {
 		for(var i in links) {
-			log("Link #" + i + ": Name-" + links[i].name + ", href-" + links[i].href + ".");
+			console.log("Link #" + i + ": Name-" + links[i].name + ", href-" + links[i].href + ".");
 		}
 	}	
 	if(links) {
 		log("There are links in the database for parsing. Starting loop now.");
-		for(var link in links) {
+		for(link in links) {
 			if(links.hasOwnProperty(link)) {
-				var currentLink = "<li><div class=\"btnDelete\"><a href=\"#\" class=\"deleteLink\" name=\"" + link + "\"><img src=\"delete.png\" title=\"Delete This Link\" /></a></div><a href=\"#\"class=\"genbutton\"><span class=\"gentext\">" + links[link].name + "</span></a></li>";
+				var currentLink = "<li><div class=\"btnDelete\"><a href=\"#\" class=\"deleteLink\" name=\"" + link + "\"><img src=\"delete.png\" title=\"Delete This Link\" /></a><span class=\"gentext\">Delete</span></div><a href=\"" + links[link].href + "\" class=\"genbutton\"><span class=\"gentext\">" + links[link].name + "</span></a><div class=\"clear\"></div></li>";
 				linkOutput += currentLink;
-				log("Link " + link + ": " + currentLink);
 			}
 		}
 		return linkOutput;
