--- a/tabPageFiles/update.html
+++ b/tabPageFiles/update.html
@@ -15,25 +15,31 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-		<title>Options :: Bad Ass New Tab Page</title>
-		<link rel="stylesheet" type="text/css" href="options.css" />
-		<script type="text/javascript" href="ClockAndLinks/js/jquery.js"></script>
+		<title>Update Info :: Bad Ass New Tab Page</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/ui-lightness/jquery-ui-1.8.18.custom.css" />
+		<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+		<script src="js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="facebox/facebox.js"></script>
 		
 	</head>
 	<body>
-		<br /><br /><br /><br /><br />
-		<h1 style="font-family:Aller,Tahoma,sans-serif;text-shadow:0px 0px 4px #000000;color:#eeeeee;">In the next update, this page will start to fill up with all the things you can configure. Right now, though, I just wanted to get you guys the core functionality of the New Tab Page beauty going. Enjoy, and stay tuned!</h1>
+		<div class="genBox">
+			<h2 style="color:#ffffff;"><img src="../img/icon_128.png" class="shadow" style="width: 80px; height: 80px;" align="left" /> Bad Ass New Tab Page :: Update</h2>
+			<br />
+			Your table was broken. Now it's not broken. I fixed it because I'm nice.
+		</div>
 		
    <script>
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-21684633-1']);
-     _gaq.push(['_trackPageview']);
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-21684633-1']);
+		_gaq.push(['_trackPageview']);
 
-     (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = 'https://ssl.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
+		(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = 'https://ssl.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
    </script>
 	</body>
 </html>
