--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -136,114 +136,13 @@ var defaultData = {
 		}
 	}
 };
-var OldData = {
-	"info": {
-		"name": "Bad Ass New Tab Page",
-		"description": "A Google Chrome extension for people tired of Chrome's ugly, useless tab page.",
-		"version": "0.2.0",
-		"homepage": "http://www.refreshedweb.com/projects/newtab/",
-		"github": "http://www.github.com/piercemoore/bantp/",
-		"devName": "Pierce Moore",
-		"devEmail": "Pierce@RefreshedWeb.com"
-	},
-	"prefs": {
-		"developerMode": true
-	},
-	"links": {
-		"linkCount": 10,
-		"links": {
-			0: {
-				"id"  : 0,
-				"href": "http://www.facebook.com",
-				"name": "facebook"
-			},
-			1: {
-				"id"  : 1,
-				"href": "http://www.google.com",
-				"name": "google"
-			},
-			2: {
-				"id"  : 2,
-				"href": "http://www.gmail.com",
-				"name": "gmail"
-			},
-			3: {
-				"id"  : 3,
-				"href": "http://www.lifehacker.com",
-				"name": "lifehacker"
-			},
-			4: {
-				"id"  : 4,
-				"href": "http://www.gizmodo.com",
-				"name": "gizmodo"
-			},
-			5: {
-				"id"  : 5,
-				"href": "http://www.newegg.com",
-				"name": "newegg"
-			},
-			6: {
-				"id"  : 6,
-				"href": "http://www.last.fm",
-				"name": "last.fm"
-			},
-			7: {
-				"id"  : 7,
-				"href": "https://www.google.com/calendar/render?tab=mc",
-				"name": "google calendar"
-			},
-			8: {
-				"id"  : 8,
-				"href": "http://www.paypal.com",
-				"name": "paypal"
-			},
-			9: {
-				"id"  : 9,
-				"href": "http://amazon.com",
-				"name": "amazon"
-			},
-			10: {
-				"id"  : 10,
-				"href": "http://www.beatport.com",
-				"name": "beatport"
-			},
-			11: {
-				"id"  : 11,
-				"href": "http://www.nytimes.com/",
-				"name": "the new york times"
-			},
-			12: {
-				"id"  : 12,
-				"href": "http://netflix.com",
-				"name": "netflix"
-			},
-			13: {
-				"id"  : 13,
-				"href": "http://hulu.com",
-				"name": "hulu"
-			},
-			14: {
-				"id"  : 14,
-				"href": "http://tusplus.com",
-				"name": "tuts+"
-			},
-			15: {
-				"id"  : 15,
-				"href": "http://spotify.com",
-				"name": "spotify"
-			}
-		}
-	}
-};
 var firstInstall = isFirstInstall();
 var debug = getDeveloperMode();
-log(OldData);
-log(JSON.stringify(OldData));
+log(defaultData);
+log(JSON.stringify(defaultData));
 
 function log(msg) {
-	if( debug ) {
-		console.log(msg);
-	}
+	//console.log(msg);
 }
 
 function getDeveloperMode() {
@@ -253,29 +152,68 @@ function getDeveloperMode() {
 // Now, let's get into some nice, sweet functionality. Do NOT edit below this comment if you do not know what you are doing!
 
 chrome.extension.onRequest.addListener( function( request , sender , sendResponse ) {
-	console.log("Request incoming. Parsing and executing now.");
+	//console.log("Request incoming. Parsing and executing now.");
 	if( request.action == 'addLink' ) {
-		console.log("AddLink functionality called.");
+		//console.log("AddLink functionality called.");
 		if( addLink( request.title , request.url ) ) {
-			console.log("Link added. Sending success message.");
+			//console.log("Link added. Sending success message.");
 			sendResponse({ success : true });
 		} else {
-			console.log("Link NOT added. Sending failure message.");
+			//console.log("Link NOT added. Sending failure message.");
 			sendResponse({ success : false });
 		}
 	} else if ( request.action == 'log' ) {
 		console.log( request.msg );
+	} else if ( request.action == 'storeOrder' ) {
+		//console.log("Storing link sort order.");
+		//console.log( request.data );
+
+		if( storeOrder( request.data ) ) {
+			//console.log("Sending success message for link storing function.");
+			sendResponse({ success : true });
+		} else {
+			//console.log("Sending failure message for link storage.");
+			sendResponse({ success : false });
+		}
+
 	}
 });
 
-function addLink( title,url ) {
+function storeOrder( data ) {
+	var count = 1;
+	var links = getLinkObj();
+
+	//console.log(links);
+	for( i in data ) {
+
+		var id = String(data[i]);
+		id = id.replace(/[a-zA-Z_]/g, '');
+
+		links[id].order = count;
+
+		count++;
+	}
+
+	//console.log(links);
+
+	if( storeLinkObj(links) ) {
+		return true;
+	} else {
+		return false;
+	}
+}
+
+function addLink( title , url ) {
 	log("Adding new link: Title- " + title + ", URL- " + url);
 
 	// Grab the link object really quickly
 	var linkObj = getLinkObj();
 
 	// Now grab the JSON object for the links themselves
-	var linkList = linkObj.links;
+	var linkList = linkObj;
+
+	console.log("This is the link list: ");
+	console.log(linkList);
 
 	log("Now we're counting the total number of links.");
 	// Let's count how many links are in the table so far, so we can insert the new link in the last position.
@@ -286,38 +224,42 @@ function addLink( title,url ) {
 	// We have to find out what the ID of the last link is so that we don't overwrite any old links. 
 	var lastLinkId;
 	log("Starting the loop to get the last index item...");
+	var order = 1;
 	for (var i in linkList) {
-		console.log(linkList[i]);
-		//log("i = ");
-		//log(i);
-    	//log("Last item found: ");
-    	//log(linkList[i]);
     	var item = i;
-    	//log("Item = ");
-    	//log(item);
+    	if(linkList[i].order > order ) {
+    		order = linkList[i].order;
+    	}
 	}
 	var newLinkId = Number(item) + Number(1);
+	var newOrder = Number(order) + Number(1);
+
 	//log(newLinkId);
 	log("Setting values for new link #" + newLinkId);
 	// Let's set the values for the new link
-	linkList[newLinkId] = {"href":url,"name":title};
+	linkList[newLinkId] = {
+		"href" : url,
+		"id"   : newLinkId,
+		"name" : title,
+		"order": newOrder
+	};
 	log(linkList[newLinkId]);
 	log("Updating link count in link object..");
 	// Now, let's update the link count in the Link Object
 	linkObj.linkCount = linkCount + 1;
-	//log(linkList);
+	console.log(linkList);
 	//log(linkObj);
 	log("Now, let's store it in local storage. Fingers crossed!");
+
 	// Now let's store it in local storage
-	/*
-	if(storeLinkObj(linkObj)) {
+	
+	if(storeLinkObj(linkList)) {
 		log("New link with url " + url + " and title " + title + " successfully stored in local storage.");
 		return true;
 	} else {
 		log("New link with url " + url + " and title " + title + " UNABLE TO BE STORED in local storage.");
 		return false;
 	}
-	*/
 
 	return true;
 }
@@ -385,7 +327,7 @@ function parseDatabase() {
 
 function processInstall() {
 	log("Processing installation...");
-	if(storeObj(OldData)) {
+	if(storeObj(defaultData)) {
 		log("Table built!");
 		return true;
 	} else {
@@ -397,14 +339,16 @@ function processInstall() {
 function processStorageUpdate() {
 
 	var data = parseDatabase();
+	console.log("Processing storage update database");
+	console.log(data);
 
 	log("Processing storage update to make it compatible with next version.");
-	
-	console.log("MAKE SURE YOU UPDATE THIS EXTENSION SO THAT IT DOESN'T BREAK PREVIOUS INSTALLATIONS!! THAT WOULD BE BAD MMMKAY!!!");
 
 	if( data.info.version == "0.3.0" ) {
-		return data;
+		console.log('data version correct');
 	} else {
+
+		console.log('version incorrect, doing update');
 		var i = 1;
 		for ( d in data.links.links ) {
 			if(data.links.links[d].hasOwnProperty( 'order' )) {
@@ -428,10 +372,9 @@ function processStorageUpdate() {
 		chrome.tabs.create({
 			url  : page
 		});
-		
-		return data;		
-
 	}
+
+	return data;
 }
 
 function isFirstInstall() {
@@ -448,16 +391,17 @@ function isFirstInstall() {
 function buildLinks() {
 
 	var data = processStorageUpdate();
-
+	console.log("Data object passed to buildLinks:");
+	console.log(data);
 	log('Working on links now...');
 	var linkOutput = "";
-	var links = data.links.links;
-	if(debug) {
-
-		for(var link in links) {
-			//console.log("Link #" + i + ": Name-" + links[link].name + ", href-" + links[link].href + ".");
-		}
-	}	
+	var links = data.links;
+	log(links);
+	console.log("Now let's run a loop.");
+	for(link in links) {
+		//log("Link #" + i + ": Name-" + links[link].name + ", href-" + links[link].href + ", order- " + links[link].order + ", id- " + links[link].id );
+	}
+	console.log("All links should be displayed.");
 	if(links) {
 		log("There are links in the database for parsing. Starting loop now.");
 
@@ -468,20 +412,13 @@ function buildLinks() {
 		for( link in links ) {
 			count++;
 
-			//console.log("This is the individual link object: ");
-			//console.log(links[link]);
-			var currentLink = "<li id=\"link_" + link + "\"><div class=\"btnDelete\"><a href=\"#\" class=\"deleteLink\" name=\"" + link + "\" linkname=\"" + links[link].name + "\"><img src=\"delete.png\" title=\"Delete This Link\" /><span class=\"gentext\">Delete</span></a></div><a href=\"" + links[link].href + "\" class=\"genbutton\"><span class=\"gentext\">" + links[link].name + "</span></a><div class=\"clear\"></div></li>";
+			var currentLink = "<li id=\"link_" + link + "\"><div class=\"btnDelete\"><a href=\"#\" class=\"deleteLink\" name=\"" + link + "\" linkname=\"" + links[link].name + "\"><img src=\"lib/img/delete.png\" title=\"Delete This Link\" /><span class=\"gentext\">Delete</span></a></div><a href=\"" + links[link].href + "\" class=\"genbutton\"><span class=\"gentext\">" + links[link].name + "</span></a><div class=\"clear\"></div></li>";
 
 			var order = links[link].order;
 
 			output[order] = currentLink;
-
-			//console.log("This is the text that will be appended to the list.");
-			//console.log(output[order]);
 		}
 
-		console.log(output);
-		console.log(count + " items in output.");
 		for( i = 1 ; i < count ; i++ ) {
 			linkOutput += output[i];
 		}
@@ -494,17 +431,15 @@ function buildLinks() {
 
 function removeLink(id) {
 	var data = parseDatabase();
-	var links = data.links.links;
+	var links = data.links;
+	console.log("Link " + id + " being deleted from this list: ");
 	console.log(links);
-	//links.splice(id,1);
-	console.log(id + " -- " + data.links.links[id]);
-	delete data.links.links[id];
-	console.log(data.links.links);
+	delete data.links[id];
 	if(storeObj(data)) {
-		console.log('Link #' + id + " removed!");
+		log('Link #' + id + " removed!");
 		return true;
 	} else {
-		console.log('Unable to remove link #' + id);
+		log('Unable to remove link #' + id);
 		return false;
 	}
 }
