--- a/tabPageFiles/index.html
+++ b/tabPageFiles/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 		<title>Start Here : Bad Ass New Tab Page</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/ui-lightness/jquery-ui-1.8.18.custom.css" />
-		<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-		<script src="js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="facebox/facebox.js"></script>
+		<link rel="stylesheet" type="text/css" href="lib/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="lib/css/ui-lightness/jquery-ui-1.8.18.custom.css" />
+		<script src="lib/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+		<script src="lib/js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="lib/facebox/facebox.js"></script>
 		<script type="text/javascript">
 
 		const bg = chrome.extension.getBackgroundPage();
@@ -25,7 +25,14 @@
 					console.log("Stopped!");
 					var order = $("#linkStart").sortable("toArray");
 					console.log(order);
-					alert(order);
+
+					chrome.extension.sendRequest({ action : "storeOrder" , data : order } , function( response ) {
+						if( response.success == true ) {
+							$("#success").html("Order stored. It's all good in the hood.").fadeIn("fast");
+						} else {
+							$("#error").html("Unable to store the order of the links. Try again, or maybe try reinstalling the extension :-/ Sorry!").fadeIn("fast");
+						}
+					});
 				},
 				start : function() {
 					console.log("Started!");
@@ -60,6 +67,9 @@
 			}
 			if(sec < 10) {
 				sec = "0" + sec;
+			}
+			if( hour == "00" || hour == 0 ) {
+				hour = "12";
 			}
 			document.getElementById("time").innerHTML = hour + ":" + min + ":" + sec + " " + ampm;
 			var day = today.toDateString();
