--- a/tabPageFiles/updatefail.html
+++ b/tabPageFiles/updatefail.html
@@ -16,12 +16,21 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 		<title>Update Info :: Bad Ass New Tab Page</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" type="text/css" href="css/ui-lightness/jquery-ui-1.8.18.custom.css" />
-		<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-		<script src="js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="facebox/facebox.js"></script>
+		<link rel="stylesheet" type="text/css" href="lib/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="lib/css/ui-lightness/jquery-ui-1.8.18.custom.css" />
+		<script src="lib/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+		<script src="lib/js/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="lib/facebox/facebox.js"></script>
 		
+		<style type="text/css">
+			@font-face {
+				font-family: Vegur;
+				src: url('lib/fonts/vegur.otf');
+			}
+			.genBox {
+				font-family: Vegur;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="genBox">
