--- a/tabPageFiles/updatefail.html
+++ b/tabPageFiles/updatefail.html
@@ -29,14 +29,65 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 			}
 			.genBox {
 				font-family: Vegur;
+				line-height: 80%;
+			}
+			h1,h2,h3 {
+				margin: 0;
+				padding: 0;
+			}
+			ol li {
+				font-size: 30px;
+				font-family: Vegur;
+			}
+			a {
+				color: #eeeeee;
+				text-shadow: 0 2px 5px #000000;
+				letter-spacing: -1px;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="genBox">
-			<h2 style="color:#ffffff;"><img src="../img/icon_128.png" class="shadow" style="width: 80px; height: 80px;" align="left" /> Bad Ass New Tab Page :: Update</h2>
+			<h2 style="color:#ffffff;"><img src="../img/icon_128.png" class="shadow" style="width: 80px; height: 80px;" align="left" /> BANTP :: Update Failed!</h2>
 			<br />
-			Your table was broken. Now it's not broken. I fixed it because I'm nice.
+			<h2>How's it going?</h2>
+			<span style="font-size: 30px; font-family: Vegur;">
+				It's going pretty well for me. It's been a few sleepless nights here because I've been so fixated on bringing you a totally bad ass update to this extension. I think I succeeded.
+			</span>
+
+			<h2>The problem: </h2>
+			<span style="font-size: 30px; font-family: Vegur;">
+				The problem is simple, but annoying. I completely updated and sexified the extension to make it more appealing to people like you. For some reason, though, the browser corrupted your data before I could get to it. I know it's annoying, but in order to keep using this extension (which I hope you will) I need you to reinstall it.
+				
+				<ol>
+					<li>Click on <a href="chrome://extensions" target="_blank">this link</a>.</li>
+					<li>Now click on <a href="https://chrome.google.com/webstore/detail/imlpnfeegpmpamjfojedndkmnhdmdnmd" target="_blank">this link</a>.</li>
+					<li>Now in the first link you opened, simply remove the software. It hurts, I know.</li>
+					<li>Now in the second link, simply refresh the page and reinstall the extension. You should be golden now!</li>
+				</ol>
+			</span>
+
+			<h2>What I Changed!</h2>
+			<span style="font-size: 30px; font-family: Vegur;">
+				The list of changes in this update is pretty comprehensive, but I'll keep it short. 
+				<ol>
+					<li>LINKS ARE NOW SORTABLE!! Yes. All caps. Because you know you wanted sortable links. My very first commenter (you know who you are) asked specifically for sortable links and WHAM there it is. All you have to do is click the "edit links" button and drag each link where you want it to go.</li>
+					<li>Enhanced the look and feel of very literally EVERY single element in the entire application. It should look and feel easier and sexier to use.</li>
+					<li>Enhanced functionality. Though you don't see it and don't care about it, the underlying code for this update is incredibly smooth.</li>
+					<li>I changed the clock settings so they should now reflect the proper 12 hour clock time, NOT the 24 hour time you're used to. It looks better, I promise.</li>
+				</ol>
+			</span>
+
+			<h2>How to contact me / Support</h2>
+			<span style="font-size: 30px; font-family: Vegur;">
+				You can email me at any time at Pierce@PierceMoore.com. Also, follow me on Twitter or Github if you like ( the links are below ). I answer email pretty effectively.
+			</span>
+			<h3>That's it! Have fun and stay tuned for more updates in the near future!</h3>
+
+			<a href="http://www.piercemoore.com" class="genbutton">PierceMoore.com</a>
+			<a href="http://www.github.com/piercemoore" class="genbutton">GitHub</a>
+			<a href="http://www.twitter.com/kiapierce" class="genbutton">Follow me on Twitter!</a>
+			<br /><br />
 		</div>
 		
    <script>
